--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Merhaba</h1>
-    
+    <header>
+            <nav>
+                <div class="left">
+                    <div class="branding">
+                        <img src="" alt="">
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Services</a>
+                        <a href="#">Pages</a>
+                        <a href="#">Blog</a>
+                    </div>
+                </div>
+                <div class="right">
+                    <button>Contact</button>
+                </div>  
+            </nav>
+    </header>
+
 </body>
 </html>
