--- a/index.html
+++ b/index.html
@@ -1,29 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+
+<body class="dark">
     <header>
-            <nav>
-                <div class="left">
-                    <div class="branding">
-                        <img src="" alt="">
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Services</a>
-                        <a href="#">Pages</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Test</a>
-                    </div>
+        <div class="portfolio-container">
+            <div class="portfolio-row header-wrap">
+                <div class="brand-name">
+                    <a href="#" class="logo">Muhammed Emin BARKOÇ</a>
                 </div>
-                <div class="right">
-                    <button>Contact</button>
-                </div>  
-            </nav>
+                <div class="portfolio-navbar">
+                    <ul>
+                        <li>
+                            <a href="#about" class="navbar-link">Home</a>
+                        </li>
+                        <li>
+                            <a href="#resume" class="navbar-link">Resume</a>
+                        </li>
+                        <li>
+                            <a href="#services" class="navbar-link">Services</a>
+                        </li>
+                        <li>
+                            <a href="#projects" class="navbar-link">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#contact" class="navbar-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar-toggle">
+                    <i class="lni lni-grid-alt"></i>
+                </div>
+            </div>
+        </div>
     </header>
 
+
+    <section id="about">
+        <div class="portfolio-container">
+            <div class="portfolio-wor about-content">
+                <div class="about-intro">
+                    <span class="subtitle">
+                        Hello
+                    </span>
+                    <div class="about-text">
+                        <h1>I am <strong>Muhammed Emin</strong></h1>
+                        <h3>User Interface Designer</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias vero, possimus officiis quo inventore numquam accusantium labore deserunt sed consequuntur?</p>
+                        <div class="hollo-btn">
+                            <a href="#contact">Say Hello</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-image">
+                    
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
