--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
     <section id="about">
         <div class="portfolio-container">
-            <div class="portfolio-wor about-content">
+            <div class="portfolio-row about-content">
                 <div class="about-intro">
                     <span class="subtitle">
                         Hello
                     </span>
                     <div class="about-text">
-                        <h1>I am <strong>Muhammed Emin</strong></h1>
+                        <h1>I am <strong>Emin</strong></h1>
                         <h3>User Interface Designer</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias vero, possimus officiis quo inventore numquam accusantium labore deserunt sed consequuntur?</p>
-                        <div class="hollo-btn">
+                        <div class="hello-btn">
                             <a href="#contact">Say Hello</a>
                         </div>
                     </div>
                 </div>
                 <div class="about-image">
-                    
+                    <img src="images/profilphoto.png" alt="profil">
                 </div>
             </div>
         </div>
