resume bölümüne geçiş
hakkında kısmının temelleri bitti. Resume bölümüne geçildi

--- a/index.html
+++ b/index.html
@@ -68,6 +68,53 @@
 
     </section>
 
+    <section id="resume">
+        <div class="portfolio-container">
+            <span class="subtitle">
+                Resume
+            </span>
+            <h2>
+                <strong>Curriculam Vitae</strong>
+            </h2>
+            <div class="portfolio-row">
+                <div class="resume-heading">
+                    <ul>
+                        <li class="resume-item">
+                            <a href="#education" data-id="education" class="resume-link">Education</a>
+                        </li>
+                        <li class="resume-item">
+                            <a href="#experience" data-id="experience" class="resume-link">Experience</a>
+                        </li>
+                        <li class="resume-item">
+                            <a href="#skills" data-id="skills" class="resume-link">Skills</a>
+                        </li>
+                        <li class="resume-item">
+                            <a href="#certification" data-id="certification" class="resume-link">Certification</a>
+                        </li>
+                    </ul>
+                </div>
+                
+                <div class="resume-body">
+                    <div class="resume-tab" id="education">
+                        <h6>Education</h6>
+                    </div>
+
+                    <div class="resume-tab" id="experience">
+                        <h6>Experience</h6>
+                    </div>
+
+                    <div class="resume-tab" id="skills">
+                        <h6>Skills</h6>
+                    </div>
+
+                    <div class="resume-tab" id="certification">
+                        <h6>Certification</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="js/script.js"></script>
 </body>
