--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="portfolio-row">
                 <div class="resume-heading">
                     <ul>
-                        <li class="resume-item">
+                        <li class="resume-item active">
                             <a href="#education" data-id="education" class="resume-link">Education</a>
                         </li>
                         <li class="resume-item">
@@ -95,8 +95,27 @@
                 </div>
                 
                 <div class="resume-body">
-                    <div class="resume-tab" id="education">
-                        <h6>Education</h6>
+
+                    <div class="resume-tab active" id="education">
+                        <div class="resume-content">
+                            <span class="years">2024-2028</span>
+                            <div class="qualification-content">
+                                <span class="title"></span>
+                                <h4 class="course">Bilgisayar Mühendisliği</h4>
+                                <h6 class="institution">Bilgisayar ve Bilişim Bilimleri Fakültesi</h6>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                        
+                        <div class="resume-content">
+                            <span class="years">2024-2028</span>
+                            <div class="qualification-content">
+                                <span class="title"></span>
+                                <h4 class="course">Bilgisayar Mühendisliği</h4>
+                                <h6 class="institution">Bilgisayar ve Bilişim Bilimleri Fakültesi</h6>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="resume-tab" id="experience">
