--- a/index.html
+++ b/index.html
@@ -97,29 +97,35 @@
                 <div class="resume-body">
 
                     <div class="resume-tab active" id="education">
-                        <div class="resume-content">
+                       <div class="resume-content">
                             <span class="years">2024-2028</span>
                             <div class="qualification-content">
-                                <span class="title"></span>
+                                <span class="title">Sakarya Üniversitesi</span>
                                 <h4 class="course">Bilgisayar Mühendisliği</h4>
                                 <h6 class="institution">Bilgisayar ve Bilişim Bilimleri Fakültesi</h6>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
+                       </div>
+
+                       <div class="resume-content">
+                        <span class="years">2024-2028</span>
+                        <div class="qualification-content">
+                            <span class="title">Sakarya Üniversitesi</span>
+                            <h4 class="course">Bilgisayar Mühendisliği</h4>
+                            <h6 class="institution">Bilgisayar ve Bilişim Bilimleri Fakültesi</h6>
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
-                        
-                        <div class="resume-content">
-                            <span class="years">2024-2028</span>
-                            <div class="qualification-content">
-                                <span class="title"></span>
-                                <h4 class="course">Bilgisayar Mühendisliği</h4>
-                                <h6 class="institution">Bilgisayar ve Bilişim Bilimleri Fakültesi</h6>
-                                <p>Lorem ipsum dolor sit amet.</p>
-                            </div>
-                        </div>
+                   </div>
                     </div>
 
                     <div class="resume-tab" id="experience">
-                        <h6>Experience</h6>
+                        <div class="resume-content">
+                            <span class="years">2020-2022</span>
+                            <div class="qualification content">
+                                <h4 class="role">Web Tasarımı ve Kodlama</h4>
+                                <h6 class="organization">Anadolu Üniversitesi</h6>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="resume-tab" id="skills">
