--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 
 <head>
     <meta charset="UTF-8">
@@ -20,19 +21,22 @@
                 <div class="portfolio-navbar">
                     <ul>
                         <li>
-                            <a href="#about" class="navbar-link">Home</a>
+                            <a href="#about" class="navbar-link">Ana Sayfa</a>
                         </li>
                         <li>
-                            <a href="#resume" class="navbar-link">Resume</a>
+                            <a href="#hakkında" class="navbar-link">Hakkında</a>
                         </li>
                         <li>
-                            <a href="#services" class="navbar-link">Services</a>
+                            <a href="#resume" class="navbar-link">Eğitim</a>
                         </li>
                         <li>
-                            <a href="#projects" class="navbar-link">Projects</a>
+                            <a href="#services" class="navbar-link">Şehrim</a>
                         </li>
                         <li>
-                            <a href="#contact" class="navbar-link">Contact</a>
+                            <a href="#projects" class="navbar-link">Mirasımız</a>
+                        </li>
+                        <li>
+                            <a href="#contact" class="navbar-link">İletişim</a>
                         </li>
                     </ul>
                 </div>
@@ -49,14 +53,14 @@
             <div class="portfolio-row about-content">
                 <div class="about-intro">
                     <span class="subtitle">
-                        Hello
+                        Merhaba
                     </span>
                     <div class="about-text">
-                        <h1>I am <strong>Emin</strong></h1>
-                        <h3>User Interface Designer</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias vero, possimus officiis quo inventore numquam accusantium labore deserunt sed consequuntur?</p>
+                        <h1>Ben <strong>Emin</strong></h1>
+                        <h3>Sakarya Üniversitesi</h3>
+                        <p>Merhaba, ben Muhammed Emin BARKOÇ. Sakarya Üniversitesi Bilgisayar Mühendisliği öğrencisiyim. Çorum'da doğdum. Bilgisayarlarla uğraşmayı seviyorum ve özellikle yazılım geliştirme konusunda ilgiliyim. Aynı zamanda futbol oynamaktan ve futbol maçlarını takip etmekten hoşlanırım. </p>
                         <div class="hello-btn">
-                            <a href="#contact">Say Hello</a>
+                            <a href="#contact">Selamün Aleyküm</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +133,24 @@
                     </div>
 
                     <div class="resume-tab" id="skills">
-                        <h6>Skills</h6>
+                        <div class="bar-content">
+                            <div class="bar-heading">
+                                <div class="bar-title">Design Tools</div>
+                                <div class="bar-percentage">90%</div>
+                            </div>
+                            <div class="bar-progress">
+                                <div class="progres-bar" style = "width:90%;"></div>
+                            </div>
+
+                            <div class="bar-heading">
+                                <div class="bar-title">Front End Development Basics</div>
+                                <div class="bar-percentage">90%</div>
+                            </div>
+                            <div class="bar-progress">
+                                <div class="progres-bar" style = "width:90%;"></div>
+                            </div>
+                        </div>
+                        
                     </div>
 
                     <div class="resume-tab" id="certification">
