iletişime geç bölümü

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -30,7 +31,7 @@
                             <a href="#resume" class="navbar-link">Eğitim</a>
                         </li>
                         <li>
-                            <a href="#services" class="navbar-link">Şehrim</a>
+                            <a href="#sehrim" class="navbar-link">Şehrim</a>
                         </li>
                         <li>
                             <a href="#projects" class="navbar-link">Mirasımız</a>
@@ -69,16 +70,21 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <section class="hakkinda">
+        <div class="hakkinda-container">
+
+        </div>
     </section>
 
     <section id="resume">
         <div class="portfolio-container">
             <span class="subtitle">
-                Resume
+                Eğitim
             </span>
             <h2>
-                <strong>Curriculam Vitae</strong>
+                <strong>CV</strong>
             </h2>
             <div class="portfolio-row">
                 <div class="resume-heading">
@@ -161,7 +167,104 @@
         </div>
     </section>
 
+    <section id="sehrim">
+        <div class="portfolio-container">
+            <span class="subtitle">
+                Şehrim
+            </span>
+            <h2>
+                <strong>ÇORUM</strong>
+            </h2>
 
+            <div class="sehrim-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="sehir-icerigi">
+                            <img src="images/corumsaatkulesi.jpg" alt="">
+                            <div class="img-kaplama"></div>
+                            <div class="icerik-basligi">
+                                <h4>Çorum Saat Kulesi</h4>
+                                <p>Çorum saat kulesi şehrin merkezinde bulunur.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="sehir-icerigi">
+                            <img src="images/corumstat.jpg" alt="">
+                            <div class="img-kaplama"></div>
+                            <div class="icerik-basligi">
+                                <h4>Çorum Futbol Kulubü</h4>
+                                <p>Çorum Futbol Kulubü PTT 1. Ligde bulunan şehrimizin takımıdır.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="arrow">
+                        <div class="oncekiOkBtn">
+                            <i class="lni lni-chevron-left"></i>
+                        </div>
+                        <div class="sonrakiOkBtn">
+                            <i class="lni lni-chevron-right"></i>
+                        </div>
+                        <ul class="swiper-pagination"></ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="iletisim">
+        <div class="portfolio-container">
+            <span class="subtitle">
+                İletişim
+            </span>
+            <h2>
+                <strong>İletişime Geç</strong>
+            </h2>
+            <div class="portfolio-row">
+                <div class="iletisim-bilgi">
+                    <ul>
+                        <li class="iletisim-esya">
+                            <div class="iletisim-icon">
+                                <i class="lni lni-phone"></i>
+                            </div>
+                            <div class="iletisim-detay">
+                                <h5>Telefon</h5>
+                                <span>0535 534 16 65</span>
+                            </div>
+                        </li>
+                        <li class="iletisim-esya">
+                            <div class="iletisim-icon">
+                                <i class="lni lni-envelope"></i>
+                            </div>
+                            <div class="iletisim-detay">
+                                <h5>Email</h5>
+                                <span>eclakjdsg@gmail.com</span>
+                            </div>
+                        </li>
+                        <li class="iletisim-esya">
+                            <div class="iletisim-icon">
+                                <i class="lni lni-map-marker"></i>
+                            </div>
+                            <div class="iletisim-detay">
+                                <h5>Adres</h5>
+                                <span>0535 534 16 65</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="iletisim-heading">
+                    <span class="subtitle">
+                        Mesaj
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@1/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
