--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
         </div>
     </section>
 
-
     <section id="iletisim">
         <div class="portfolio-container">
             <span class="subtitle">
@@ -290,6 +289,59 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="portfolio-container">
+            <div class="footer-top">
+                <div class="portfolio-row footer wrap">
+                    <div class="brand-name">
+                        <a href="#" class="logo">Muhammed Emin BARKOÇ</a>
+                    </div>
+                    <div class="portfolio-navbar">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#resume">Resume</a>
+                            </li>
+                            <li>
+                                <a href="#iletisim">İletişim</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="portfolio-row footer wrap">
+                    <ul class="social-icons">
+                        <li class="social-item">
+                            <a href="#" target="_blank">
+                                <i class="lni lni-facebook-fill"></i>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" target="_blank">
+                                <i class="lni lni-twitter-fill"></i>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" target="_blank">
+                                <i class="lni lni-instagram-fill"></i>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" target="_blank">
+                                <i class="lni lni-linkedin-original"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
