--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -167,50 +167,37 @@
         </div>
     </section>
 
+
+
     <section id="sehrim">
+
         <div class="portfolio-container">
+
             <span class="subtitle">
                 Şehrim
             </span>
+
             <h2>
                 <strong>ÇORUM</strong>
             </h2>
 
-            <div class="sehrim-slider">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="sehir-icerigi">
-                            <img src="images/corumsaatkulesi.jpg" alt="">
-                            <div class="img-kaplama"></div>
-                            <div class="icerik-basligi">
-                                <h4>Çorum Saat Kulesi</h4>
-                                <p>Çorum saat kulesi şehrin merkezinde bulunur.</p>
-                            </div>
-                        </div>
+            <div class="swiper">
+
+                <div class="sehrim-slider">
+                    
+                    <div class="swiper-wrapper">
+                        <img src="images/corumsaatkulesi.jpg" alt="">
                     </div>
-                    <div class="swiper-slide">
-                        <div class="sehir-icerigi">
-                            <img src="images/corumstat.jpg" alt="">
-                            <div class="img-kaplama"></div>
-                            <div class="icerik-basligi">
-                                <h4>Çorum Futbol Kulubü</h4>
-                                <p>Çorum Futbol Kulubü PTT 1. Ligde bulunan şehrimizin takımıdır.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="arrow">
-                        <div class="oncekiOkBtn">
-                            <i class="lni lni-chevron-left"></i>
-                        </div>
-                        <div class="sonrakiOkBtn">
-                            <i class="lni lni-chevron-right"></i>
-                        </div>
-                        <ul class="swiper-pagination"></ul>
-                    </div>
+
                 </div>
+
             </div>
+                
         </div>
+
     </section>
+
+
 
     <section id="iletisim">
         <div class="portfolio-container">
@@ -345,7 +332,7 @@
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@1/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
