--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -182,19 +182,37 @@
             </h2>
 
             <div class="swiper">
-
                 <div class="sehrim-slider">
-                    
                     <div class="swiper-wrapper">
-                        <img src="images/corumsaatkulesi.jpg" alt="">
+                        <div class="swiper-slide">
+                            <div class="urun-icerik">
+                                <img src="images/corumsaatkulesi.jpg" alt="">
+                                <div class="resim-kaplama"></div>
+                                <div class="urun-baslik">
+                                    <h4>Çorum Saat Kulesi</h4>
+                                    <p>Çorum saat kulesi şehrin merkezinde bulunur.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="images/corumstat.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            slide 3
+                        </div>
                     </div>
-
+                    <div class="ok">
+                        <div class="ileriOkButonu">
+                            <i class="lni lni-chevron-left"></i>
+                        </div>
+                        <div class="geriOkButonu">
+                            <i class="lni lni-chevron-right"></i>
+                        </div>
+                        <ul class="swiper-pagination"></ul>
+                    </div>
                 </div>
-
             </div>
-                
         </div>
-
     </section>
 
 
@@ -332,7 +350,7 @@
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
